syntax = "proto3";

message Log {
    int32 row_number = 1;
    string user_id = 2;
    string text = 3;
}

message Logs {
    repeated Log logs = 1;
}

message Empty {}

service LogService {
    rpc AddLog(stream Log) returns (Empty);
    rpc GetLog(Empty) returns (Logs);
    rpc ListenLog(Empty) returns (stream Log);
    rpc UnlistenLog(Empty) returns (Empty);
}